# Argus

./: README.md  app.py  main.py  pyproject.toml
aiis/: api.py  engine.py  event_generator.py  log_generator.py  metric_generator.py  models.py  shared.py  state.py
argus/: __init__.py  agent.py  data_source.py  llm.py
